# dconstruct

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DCScript.h  README.md  base.h  binaryfile.cpp  binaryfile.h  buildinfo.py  cleanup.py  cpp_ref.md  dcpl.md  disassembler.cpp  disassembler.h  grammar.md  group_regex_matches.py  main.cpp  mainwindow.cpp  render_cfg.py  s.txt  script.h  single_file_stuff.cpp  sort.py  test.py  test.txt  test324.asm  test5.txt  test7.txt  test_hash.py
include/: DCHeader.h  DCScript.h  about.h  base.h  binaryfile.h  sidbase.h
include/ast/: assign.h  ast.h  ast_source.h  binary_expression.h  cast.h  clonable.h  expression.h  external_declaration.h  function_definition.h  parameter.h  printable.h  program.h  state_script.h  statement.h  type.h  unary_expression.h  using_declaration.h
include/ast/binary_expressions/: add.h  assign.h  bitwise_and.h  bitwise_or.h  bitwise_xor.h  cast.h  compare.h  div.h  logical.h  mod.h  mul.h  shift.h  sub.h
include/ast/optimization/: foreach_optimization.h  match_optimization.h  var_optimization.h
include/ast/primary_expressions/: call.h  cast.h  dereference.h  grouping.h  identifier.h  literal.h  match.h  sizeof_expression.h  subscript.h  ternary.h
include/ast/state_script/: state_script.h  state_script_block.h  state_script_fwd.h  state_script_lambda.h  state_script_state.h  state_script_track.h  track.h
include/ast/statements/: block.h  breakpoint.h  dummy.h  expression_statement.h  for.h  foreach.h  if.h  parameter.h  return.h  variable_declaration.h  while.h
include/ast/unary_expressions/: bitwise_not_expression.h  dereference_expression.h  increment_expression.h  logical_not_expression.h  negate_expression.h  post_arithmetic.h
include/compilation/: compiler_funcs.h  dc_code_generator.h  dc_parser.h  dc_register.h  environment.h  function.h  global_state.h  lexer.h  preprocessor.h  program_binary_element.h  tokens.h
include/decompilation/: control_flow_graph.h  decomp_function.h  decompiler.h  expression_frame.h
include/disassembly/: disassembler.h  disassembly_functions.h  edit_disassembler.h  file_disassembler.h  instructions.h  listing_view_disassembler.h  opcodes.h
include/shaders/: ndshader.h
source/: about.h  main.cpp  main_cli.cpp  main_dcc.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h  to_proper_c_output.py  ui_wrapper.py
source/ast/: ast.h  binary_expressions.cpp  binary_expressions.h  expression.h  expressions.cpp  expressions.h  function_definition.cpp  literal.h  parameter.cpp  printable.h  program.cpp  statements.cpp  statements.h  type.cpp  type.h  using_declaration.cpp
source/ast/binary_expressions/: add.cpp  add.h  assign.cpp  assign.h  binary_expression.cpp  bitwise_and.cpp  bitwise_or.cpp  bitwise_xor.cpp  cast.cpp  compare.cpp  compare.h  div.cpp  div.h  logical.cpp  mod.cpp  mul.cpp  mul.h  shift.cpp  sub.cpp  sub.h
source/ast/declarations/: variable_declaration.h
source/ast/optimization/: foreach_optimization.cpp  match_optimization.cpp  var_optimization.cpp
source/ast/primary_expressions/: call.cpp  call.h  cast.cpp  dereference.cpp  grouping.cpp  grouping.h  identifier.cpp  identifier.h  literal.cpp  literal.h  match.cpp  subscript.cpp  ternary.cpp
source/ast/state_script/: state.cpp  state_script.cpp  state_script_block.cpp  state_script_lambda.cpp  state_script_state.cpp  state_script_track.cpp  track.cpp
source/ast/statements/: assign_statement.h  block.cpp  breakpoint.cpp  expression_statement.cpp  expression_statement.h  for.cpp  foreach.cpp  function_defintion.h  if.cpp  parameter.h  return.cpp  statements.cpp  statements.h  variable_declaration.cpp  variable_declaration.h  while.cpp
source/ast/unary_expressions/: bitwise_not_expression.cpp  dereference.cpp  negate_expression.h  (+6 more)
source/base/: binaryfile.cpp  sidbase.cpp
source/cfg/: cfgelement.cpp  cfgelement.h  gaph_view_controller.h  graph_ciew_controller.cpp
source/compilation/: dc_code_generator.cpp  dc_parser.h  environment.cpp  environment.h  function.cpp  global_state.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  preprocessor.cpp  tokens.cpp  tokens.h
source/decompilation/: binary_expressions.cpp  binary_expressions.h  control_flow_graph.cpp  control_flow_graph.h  decomp_function.cpp  decompiler.cpp  decompiler.h  emitter.h  expression_frame.cpp  expression_frame.h  expressions.cpp  expressions.h  statements.h
source/disassembly/: DCHeader.h  DCScript.h  base.h  binaryfile.cpp  binaryfile.h  buildinfo.h  control_flow_graph.cpp  control_flow_graph.h  custom_structs.cpp  custom_structs.h  decompiler.cpp  decompiler.h  disassembler.cpp  disassembler.h  edit_disassembler.cpp  edit_disassembler.h  file_disassembler.h  instructions.cpp  instructions.h  listing_view_contoller.cpp  listing_view_controller.h  listing_view_disassembler.h  sidbase.cpp  sidbase.h
source/hooking/: edit_asm.py  hooking.cpp  parse_instruction.cpp  parse_instruction2.cpp  tlou-ii.exe.masm
source/shaders/: ndshader.cpp  test.cpp
source/ui/: mainwindow.ui
test/: binaryfile_test.cpp  compiler_test.cpp  decompiler_test.cpp  disassembler_test.cpp  ghidra_opcodes.h  ipdom.py  single_file_stuff.cpp
test/dcpl/: #14C6FC79122F4A87.dcpl  #43DF4E5E85BFD47C.dcpl  #608356039B1FD9FD.dcpl  #7C28D25188889230.dcpl  #8A8D5C923D5DDB3B.dcpl  #A548628CB635DC72.dcpl  #B97D31F760DB0E8E.dcpl  #BC06CBDEAE8344C7.dcpl  #C3B48D02AC9ECB46.c  #C3B48D02AC9ECB46.dcpl  #D14395D282B18D18.dcpl  #E16F9CC43A37FADA.dcpl  #E5FCFC6B95B3F669.dcpl  anonymous@106160.dcpl  anonymous@106664.dcpl  anonymous@110208.dcpl  anonymous@110440.dcpl  anonymous@112944.dcpl  anonymous@126112.dcpl  anonymous@40448.dcpl  anonymous@42392.dcpl  anonymous@53936.dcpl  anonymous@54768.dcpl  anonymous@64816.dcpl  anonymous@64976.dcpl  anonymous@65144.dcpl  anonymous@65776.dcpl  anonymous@81616.dcpl  anonymous@85752.dcpl  anonymous@88072.dcpl  anonymous@96136.dcpl  anonymous@96464.dcpl  wait_until_anim_fully_faded_in.dcp
test/shader_test_files/: 1.cxo  2.cxo  test.cxo
test/test_programs/: 25038.rkt  25b88.rkt  test.dc
test/uc4/: uc4_to_tlou_sidbase.py
(+3 files in other folders)
